--- a/test/fixtures/menu_families.yml
+++ b/test/fixtures/menu_families.yml
@@ -1,4 +1,23 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: menu_families
+#
+#  id           :bigint           not null, primary key
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  family_id    :bigint
+#  menu_list_id :bigint
+#
+# Indexes
+#
+#  index_menu_families_on_family_id     (family_id)
+#  index_menu_families_on_menu_list_id  (menu_list_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (family_id => families.id)
+#  fk_rails_...  (menu_list_id => menu_lists.id)
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
