--- a/test/fixtures/menu_lists.yml
+++ b/test/fixtures/menu_lists.yml
@@ -1,4 +1,25 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: menu_lists
+#
+#  id         :bigint           not null, primary key
+#  image      :text
+#  menu_name  :string           default(""), not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  family_id  :bigint           not null
+#  user_id    :bigint           not null
+#
+# Indexes
+#
+#  index_menu_lists_on_family_id  (family_id)
+#  index_menu_lists_on_user_id    (user_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (family_id => families.id)
+#  fk_rails_...  (user_id => users.id)
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
